bouton domaines + action

--- a/src/views/AccueilView.fxml
+++ b/src/views/AccueilView.fxml
@@ -29,7 +29,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="btDisconnect" layoutX="14.0" layoutY="64.0" mnemonicParsing="false" onAction="#handleDisconnect" prefHeight="46.0" prefWidth="373.0" text="Déconnexion" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0">
+            <Button fx:id="btDisconnect" layoutX="14.0" layoutY="116.0" mnemonicParsing="false" onAction="#handleDisconnect" prefHeight="46.0" prefWidth="373.0" text="Déconnexion" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0">
                <graphic>
                   <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -37,6 +37,7 @@
                      </image></ImageView>
                </graphic>
             </Button>
+            <Button fx:id="btDomains" layoutX="14.0" layoutY="65.0" mnemonicParsing="false" onAction="#handleBtDomains" prefHeight="46.0" prefWidth="373.0" text="Domaines" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" />
          </children>
       </AnchorPane>
    </children>
